# avataa-security

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
app/: init_app.py  main.py
app/auth/: keycloak.py  utils.py
app/database/models/: prefixes.py
app/kc/: kc_connection.py  models.py  roles.py
app/routers/: roles.py  user_info.py
app/routers/resp_models/: roles.py
app/service/: instances.py
app/service/auth_service/: auth_interface.py  keycloak_auth.py
app/service/cache_service/: cache_interface.py  redis_cache.py
app/settings/: documentation_settings.py  keycloak_settings.py  level_settings.py  redis_settings.py
app/tasks/userinfo/: protocols.py  task.py
